# weather-forecasting-project

./: .env.example  .gitignore  Makefile  README.md  locations.example.json  pyproject.toml  requirements.txt
src/: cli.py  client.py  config.py  exporter.py  main.py
tests/: test_cli.py  test_client.py  test_exporter.py
