[project]
name = "weather-forecasting-project"
version = "0.1.0"
description = "Weather forecasting data fetcher using TMD API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "typer>=0.24.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyright==1.1.408",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff==0.15.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
